# OAPI

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  default_config.yaml
.github/workflows/: ci.yml
docs/: AUTH.md  ajouter_api_externe.md  api_fetcher.md  architecture.md  configuration.md  generation_images.md  monitoring.md  pocketbase.md
docs/en/: AUTH.md  architecture.md  configuration.md  generation_images.md  monitoring.md  pocketbase.md
public/: admin.html  index.html  investor.html  monitoring.html
src/: config.rs  handlers.rs  main.rs  models.rs  services.rs
src/actions/: auth_actions.rs  discord_actions.rs  minecraft_actions.rs  mod.rs  monitoring_actions.rs
src/handlers/: admin_handler.rs  auth_handler.rs  discord_handler.rs  image_handler.rs  investor_handler.rs  middleware.rs  minecraft_handler.rs  mod.rs  monitoring_handler.rs
src/models/: auth.rs  common.rs  discord.rs  minecraft.rs  mod.rs  monitoring.rs  server.rs
src/routes/: mod.rs
src/services/: image_service.rs  item_service.rs  mod.rs
src/utils/: api_endpoints.rs  api_fetch.rs  constants.rs  formatters.rs  mod.rs  paths.rs  pocketbase.rs
