[package]
name = "OAPI"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
utoipa = "4"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "local-time"] }
image = "0.25"
rusttype = "0.9"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
config = { version = "0.15.23", features = ["yaml"] }
dotenvy = "0.15"
craftping = { version = "0.7.0", features = ["async-tokio"] }
oauth2 = "4.4.2"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }

[dev-dependencies]
mockito = "1.7.2"
