[package]
name = "OAPI"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
utoipa = "4"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "local-time"] }
rusttype = "0.9"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dotenvy = "0.15"
craftping = { version = "0.7.0", features = ["async-tokio"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
urlencoding = "2.1.3"
config = "0.15.25"
image = "0.25.10"

[dev-dependencies]
mockito = "1.7.2"
tower = { version = "0.5.3", features = ["util"] }
